# cloudsek-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/routes/: health.py  metadata.py
app/core/: config.py  logging.py
app/db/: mongo.py  repository.py
app/models/: schemas.py
app/services/: fetcher.py  metadata_service.py  worker.py
app/utils/: url.py
scripts/: run-local.sh  stop-local.sh
tests/: conftest.py  test_api.py  test_config.py  test_fetcher.py  test_logging.py  test_metadata_service.py  test_mongo.py  test_repository.py  test_url.py  test_url_private.py  test_worker.py  test_worker_drain_timeout.py
