[project]
name = "http-metadata-inventory"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:bson.*",
    "ignore::DeprecationWarning:pymongo.*",
]
